# article-nbv

./: .gitignore  CHANGELOG.md  DATASETS_AND_VISUALIZATION.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  KAGGLE_MANUAL_UPLOAD.md  KAGGLE_SUCCESS.md  KAGGLE_TRAINING.md  KAGGLE_UPDATE_GUIDE.md  MY_README.md  POINTNET_GUIDE.md  POINTNET_SUMMARY.md  PROJECT_PIPELINE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  TRAINING_STAGES_GUIDE.md  analyze_screenshots.py  capture_texture_views.py  config.py  evaluate.py  fix_imports.py  generate_texture_grid.py  gui.py  kaggle_train.py  kaggle_train_vision.py  new_prompt.md  pyproject.toml  take_screenshots.py  timings_0.json  train.py  upload_remaining.py  upload_to_kaggle.py  verify_setup.py
.claude/: settings.local.json
dataset/00/: 0000_depth.npy  0000_meta.json  0001_depth.npy  0001_meta.json  0002_depth.npy  0002_meta.json  0003_depth.npy  0003_meta.json  0004_depth.npy  0004_meta.json  0005_depth.npy  0005_meta.json  (+188 more)
notebooks/: kaggle_training.ipynb  kaggle_training_clean.ipynb  kaggle_training_v2.ipynb  kernel-metadata.json  test_minimal.ipynb
scripts/: capture_simple.py  generate_all_visualizations.py  generate_and_upload_datasets.py  generate_sample_viewer.py  kaggle_auto_run.py  kaggle_train_full.py  master_pipeline.py  prepare_stage_datasets.py  push_to_kaggle.py  test_full_pipeline.py  test_pointnet.py  test_scene_stages.py  test_texture_params.py  test_textures.py  test_training_single_sample.py  update_kaggle_datasets.py  upload_to_kaggle.py  validate_stages.py  visualize_textures.py
(+19765 files in other folders)
