[project]
name = "nbv-project"
version = "0.1.0"
description = "Next Best View Reinforcement Learning Project"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "gymnasium>=0.29.1",
    "matplotlib>=3.9.0",
    "pybullet>=3.2.6",
    "scikit-learn>=1.5.0",
    "stable-baselines3>=2.3.2",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "tqdm>=4.66.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "umap-learn>=0.5.6",
    "numba>=0.64.0",
]
